--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>Export data</title>
+    <script>
+    function render(){
+      alert("Hello Mr.");
+    }
+    </script>
   </head>
   <body>
     <h1>Hello</h1>
