--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <h1>Hello</h1>
-    <button onClick=render>ldlj</button>
+    <button onClick="render()">ldlj</button>
   </body>
 </html>
