--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
   <head>
     <title>Export data</title>
     <script>
-    function render(){
-      alert("Hello Mr.");
+    function render(event){
+      alert(event);
     }
     </script>
   </head>
   <body>
     <h1>Hello</h1>
+    <intput type="text" id="name"/>
     <button onClick="render()">ldlj</button>
   </body>
 </html>
