--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </script>
   </head>
   <body>
-     <form onSubmit={handleChange}>
+     <form onSubmit="handleChange()">
         <span>
           First Name: <input type="text" id="fname" />
         </span>
