--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <title>Export data</title>
     <script>
     var submitForm = Array();
-  function handleChange(e) {
-    e.preventDefault();
+  function handleChange(event) {
+    event.preventDefault();
 
-    submitForm[0] = e.target[0].value;
-    submitForm[1] = e.target[1].value;
-    submitForm[2] = e.target[2].value;
-    submitForm[3] = e.target[3].value;
-    submitForm[4] = e.target[4].value;
-    submitForm[5] = e.target[5].value;
+    submitForm[0] = event.target[0].value;
+    submitForm[1] = event.target[1].value;
+    submitForm[2] = event.target[2].value;
+    submitForm[3] = event.target[3].value;
+    submitForm[4] = event.target[4].value;
+    submitForm[5] = event.target[5].value;
 
     $.ajax({
       url: 'demo_test.txt',
@@ -23,7 +23,7 @@
     </script>
   </head>
   <body>
-     <form onSubmit="handleChange()">
+     <form onSubmit="handleChange(this)">
         <span>
           First Name: <input type="text" id="fname" />
         </span>
