--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ if( submitForm[4]!= submitForm[5]){
   alert("Password did't match");
     return false;
 }
-   alert("Hello Mr/Mrs." + submitForm[0]+ "<br/> Your form submit successfully!");
-    return ture;
+   alert("Hello Mr/Mrs." + submitForm[0]+ " Your form submit successfully!");
+    return true;
   }
     </script>
   </head>
