--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ if( submitForm[4]!= submitForm[5]){
     </script>
   </head>
   <body>
-     <form onSubmit="handleChange(this)">
+     <form>
         <span>
           First Name: <input type="text" id="fname" />
         </span>
