--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ if( submitForm[4]!= submitForm[5]){
     messagingSenderId: "571386665157",
     appId: "1:571386665157:web:10148e512b60607e2bf8ac"
   };
-  const app = initializeApp(firebaseConfig);
+  firebase.initializeApp(firebaseConfig);
 
    //---------Insert--------//
  var name, lname, emil, phone, pass, confpass;
